# puente-idonia-recog

./: .coderabbit.yaml  .dockerignore  .gitignore  Dockerfile  LICENSE.md  Makefile  README.md  RESPX-GUIDE.md  compose.yaml  docker-compose.yml  pyproject.toml
.github/workflows/: check.yaml  check.yml
config/: grafana-datasources.yaml  loki.yaml  otelcol.yaml  presidio-analyzer.yaml  tempo.yaml
src/puente/: bootstrap.py  config.py
src/puente/adapters/: idonia.py  pdf_to_txt.py  placeholders.py  presidio.py  recog.py
src/puente/api/: app.py  v1.py
src/puente/audit/: pki.py  storage.py  worker.py
src/puente/audit/api/: app.py  lifespan.py  v1.py
src/puente/cli/: audit.py  client.py  demo.py  dicom.py  healthcheck.py  main.py  mocks.py  presidio_demo.py  presidio_samples.py
src/puente/domain/: models.py  ports.py
src/puente/service/: pipeline.py
src/puente/telemetry/: getters.py  setup.py  timer.py
tests/: conftest.py
tests/e2e/: common.py  test_audit_api.py  test_bridge.py  test_bridge_error.py  test_bridge_happy.py
tests/integration/: test_pipeline.py  test_pipeline_error.py  test_pipeline_happy.py
tests/support/: data.py  fakes.py  mocks.py
tests/unit/: test_audit_cli.py  test_audit_pki.py  test_audit_storage.py  test_audit_worker.py  test_dicom.py  test_idonia.py  test_pdf_to_text.py  test_presidio.py  test_recog.py
