[build-system]
build-backend = "hatchling.build"
requires = [ "hatchling" ]

[project]
name = "puente"
version = "0.1.0"
description = """\
  Interoperability bridge between Idonia medical imaging middleware and Recog AI Framework for cross-border patient \
  records. Async ingest of DICOM studies and reports, NLP-driven humanization with PII redaction, and secure Magic \
  Link delivery, built with hash-chained audit logging.\
  """
readme = "README.md"
keywords = [
  "audit-log",
  "dicom",
  "fastapi",
  "healthcare",
  "hexagonal-architecture",
  "idonia",
  "interoperability",
  "medical-imaging",
  "recog",
]
authors = [
  { name = "Sergio Díaz Esparza", email = "diaz.esparza@proton.me" },
  { name = "Marina Dáder Suárez", email = "marina.dader.suarez@gmail.com" },
]
requires-python = ">=3.14"
classifiers = [
  "Development Status :: 4 - Beta",
  "Framework :: FastAPI",
  "Intended Audience :: Healthcare Industry",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.14",
  "Topic :: Scientific/Engineering :: Medical Science Apps.",
  "Typing :: Typed",
]
dependencies = [
  "fastapi>=0.136.1",
  "httpx>=0.28.1",
  "opentelemetry-api>=1.42.1",
  "opentelemetry-exporter-otlp>=1.42.1",
  "opentelemetry-instrumentation-fastapi>=0.63b1",
  "opentelemetry-instrumentation-httpx>=0.63b1",
  "opentelemetry-sdk>=1.42.1",
  "orjson>=3.11.9",
  "pydantic>=2.13.4",
  "pydantic-settings>=2.9.1",
  "pyjwt>=2.10.1",
  "pymupdf>=1.27.2.3",
  "rich>=14",
  "structlog>=25.5",
  "typer>=0.15.3",
  "uvicorn>=0.34.2",
]
scripts.puente = "puente.cli.main:app"

[dependency-groups]
dev = [
  "pyproject-fmt>=2.21.2",
  "pyright>=1.1.410",
  "pytest>=9.0.3",
  "pytest-asyncio>=1.3",
  "respx>=0.23.1",
  "ruff>=0.11",
  "yamlfix>=1.19.1",
]

[tool.hatch]
build.targets.wheel.packages = [ "src/puente" ]

[tool.ruff]
target-version = "py314"
line-length = 79
lint.select = [
  "A",
  "ASYNC",
  "B",
  "C4",
  "D3",
  "D400",
  "D415",
  "E",
  "ERA",
  "F",
  "FAST",
  "I",
  "N",
  "PERF",
  "PL",
  "RET",
  "RUF",
  "S",
  "SIM",
  "UP",
  "W",
  "YTT",
]
lint.per-file-ignores."tests/**/*" = [
  "E402",
  "PLR2004",
  "S",
]

[tool.pyright]
pythonVersion = "3.14"
strict = [ "src/puente" ]

[tool.pytest]
ini_options.testpaths = [ "tests" ]
ini_options.asyncio_mode = "auto"

[tool.yamlfix]
explicit_start = false
sequence_style = "block_style"
line_length = 120
whitelines = 1
section_whitelines = 2
